Admins haben nun einen Nutzen. Sie können News erstellen und diese auch löschen. User können von Admins erstellte News sehen
